--- a/style.css
+++ b/style.css
@@ -1,6 +1,26 @@
 .map {
-    width: 800px;
+    display: flex;
+    width: 900px;
     height: 600px;
     border: 0;
-    src: "https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3657.160272837154!2d120.47062931501125!3d23.56268658468219!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x346ebe56d7077847%3A0x1ea97cc03ed110a4!2z5ZyL56uL5Lit5q2j5aSn5a24!5e0!3m2!1szh-TW!2stw!4v1680853886509!5m2!1szh-TW!2stw";
+    margin: auto;
+    box-shadow:
+        2px 2px 7px #555,
+        -2px -2px 7px #555;
+}
+
+.title {
+    font-size: 5rem;
+    font-family: "Playfair Display";
+    font-weight: bold;
+    text-align: center;
+}
+
+.search-box {
+    position: absolute;
+    top: 20%;
+    left: 1%;
+    padding: 8px;
+    width: 250px;
+    border-radius: 25px;
 }
